# fastgraph

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FastGraph_API_Enhancement_Recommendations.md  FastGraph_Comprehensive_Documentation.md  LICENSE  MANIFEST.in  README.md  TEST_DOCUMENTATION.md  package_architecture.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_all_tests.py  setup.py  system_architecture.md  test_enhanced_fastgraph.py  test_fix.py  test_foundation_components.py  test_integration.py  test_original_code.py  test_performance.py  validate_package.py
.github/workflows/: publish.yml  test.yml
examples/: basic_usage.py  cli_demo.py  config_example.py  context_manager_examples.py  enhanced_basic_usage.py  factory_method_examples.py  format_conversion_examples.py  migration_examples.py  performance_examples.py
fastgraph/: __init__.py  exceptions.py  types.py
fastgraph/cli/: __init__.py  commands.py  main.py  utils.py
fastgraph/config/: __init__.py  defaults.py  manager.py  validator.py
fastgraph/core/: __init__.py  edge.py  graph.py  indexing.py  persistence.py  subgraph.py  traversal.py
fastgraph/utils/: __init__.py  cache.py  memory.py  path_resolver.py  performance.py  resource_manager.py  threading.py
